package CB2;

public abstract class ChucVu {
    public abstract void ChoVay(int SotienVay);
    public abstract ChucVu ketiep(ChucVu cv);
}
